--- a/package.json
+++ b/package.json
@@ -5,12 +5,34 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install",
+    "lint": "npm-run-all --parallel lint:branch-name lint:styles lint:js",
+    "lint:branch-name": "branch-name-lint ./.branchlintrc.json",
+    "lint:commit-name": "commitlint --edit",
+    "track-time": "smile-track",
+    "lint:js": "eslint . --cache",
+    "lint:js:fix": "npm run lint:js -- --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "puppeteer": "^11.0.0"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5",
+    "branch-name-lint": "^2.1.1",
+    "husky": "^7.0.2",
+    "@commitlint/config-conventional": "^13.1.0",
+    "commitlint": "^13.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.2",
+    "prettier": "^2.3.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "lint-staged": "^11.1.2",
+    "smile-track": "^0.17.0"
   }
 }
