--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blitz-afk-steam",
+  "name": "blitz-idle-stream",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -34,6 +34,7 @@
     "lint-staged": "^11.1.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.1",
+    "smile-config": "^1.4.0",
     "smile-track": "^0.17.0"
   }
 }
